--- a/examples/index.html
+++ b/examples/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <title>OpenLayers OSRM Example</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" href="https://unpkg.com/openlayers/dist/ol.css" />
-  <link rel="stylesheet" href="../dist/openlayers-routing-machine.css" />
-  <link rel="stylesheet" href="index.css" />
-</head>
 <body>
-  <div id="map" class="map"></div>
-  <script src="https://unpkg.com/openlayers/dist/ol-debug.js"></script>
-  <script src="../dist/openlayers-routing-machine.js"></script>
-  <script src="index.js"></script>
+
+
+<h1>Demo 101</h1>
+
+<iframe src="./eg.html" height="800" width="500" title="Iframe Example"></iframe>
+
 </body>
 </html>
